Fix color titulo dark mode

--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@
     --button-text-hover-color:var(--neutral-color-light);
     --text-color: var(--neutral-color-dark);
     --input-bg-color: var(--main-color-darkest);
+    --background-img: linear-gradient(90deg, var(--neutral-color-dark), var(--main-color-darkest));
 }
 .dark-mode{
     --background-color: var(--main-color-dark);
@@ -35,6 +36,7 @@
     --button-text-color:var(--accent-color);
     --button-text-hover-color:var(--neutral-color);
     --input-bg-color:var(--main-color-light);
+    --background-img: linear-gradient(90deg, var(--neutral-color), var(--neutral-color-light));
 }
 *{
     font-family: var(--ff-primary);
@@ -91,7 +93,7 @@ h1{
     padding: 2rem 0 2.5rem;
     font-size: 1.9rem;
     font-weight: 600;
-    background-image: linear-gradient(90deg, var(--neutral-color-dark), var(--main-color-darkest));
+    background-image: var(--background-img);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
